<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_text">Email:</string>
    <string name="login_text">Username:</string>
    <string name="password_label" />
    <string name="password_text">Password:</string>
    <string name="login_hint">Enter e-mail</string>
    <string name="password_hint">Enter password</string>
    <string name="login_title">LOGIN</string>
    <string name="login_button_text">LOGIN</string>
    <string name="login_register_button_text">REGISTER</string>
</resources>
